# aoc-rust-generator

./: Cargo.toml  readme.md
src/: main.rs
