[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2021"
default-run = "aoc-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.22", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
